gccida/g2/rtl_for_decl_location
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtl_for_decl_location/src/dwarf2out.c:9236:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtl_for_decl_location/src/dwarf2out.c:9237:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtl_for_decl_location/src/dwarf2out.c:9238:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtl_for_decl_location/src/dwarf2out.c:9239:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtl_for_decl_location/src/dwarf2out.c:9349:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8957, "rtl_for_decl_location"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtl_for_decl_location/src/dwarf2out.c:9359:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v18] == MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtl_for_decl_location/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtl_for_decl_location/src/obj/dwarf2out.o] Error 1
